[build-system]
requires = ["setuptools>=61.0", "setuptools_scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kanata-layer-viewer"
description = "Show kanata layers."
license = { file = "LICENSE" }
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = ["selenium", "xkbcommon", "pyparsing", "i3ipc", "kalamine"]
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
]
authors = [{ name = "Élie Bouttier", email = "elie+kanata@bouttier.eu" }]

[project.scripts]
"kanata-layer-viewer" = "kanata_layer_viewer:main"

[tool.black]
target-version = ["py310"]
